[package]
name = "sequitur"
version = "0.1.11"
edition = "2021"
description = "A library for working with numbered file sequences"
license = "MIT"
repository = "https://github.com/arcadeperfect/sequitur"
readme = "README.md"
keywords = ["files", "sequence", "vfx", "rename"]
categories = ["filesystem"]

[lib]
name = "sequitur"
path = "src/lib.rs"

[dependencies]
thiserror = "2.0.17"
